--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	 <header>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Estatística</a>
+		<a class="navbar-brand" href="#">Estatística</a>
       </nav>
     </header>
 	<main role="main" class="container">
@@ -49,8 +49,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
-		  <div class="col-sm-6">
 		    <div class="card">
 		    	<div class="card-header text-center">
 		    		<img class="figuras" src="./img/escola.png" alt="" width="32" height="32">
@@ -60,7 +58,7 @@
 		        <table class="table">
 				  <thead>
 				  <tbody>
-				    <tr>
+				    <tr >
 				      <th scope="row">Média</th>
 				      <td id="media"></td>
 				    </tr>
@@ -104,25 +102,6 @@
 				</table>
 		      </div>
 		    </div>
-		  </div>
-		  <div class="col-sm-6">
-		    <div class="card">
-		    	<div class="card-header text-center">
-		    		<img class="figuras" src="./img/linha.png" alt="" width="32" height="32">
-		    		Gráficos
-				</div>
-				<div>
-					<canvas id="histograma"></canvas>
-				</div>
-				<div>
-					<canvas id="poligono_frequencia"></canvas>
-				</div>
-				<div>
-					<canvas id="ogiva"></canvas>
-				</div>
-		    </div>
-		  </div>
-		</div>
 		<div style="margin-bottom: 50px; margin-top: 50px;">
 			<div class="card text-center">
 				<div class="card-header text-center">
@@ -134,10 +113,10 @@
 					  <thead>
 					    <tr class="format">
 					      <th scope="col">Valor</th>
-					      <th scope="col">Fi</th>
-					      <th scope="col">Xi</th>
-					      <th scope="col">Fac</th>
-					      <th scope="col">fi(%)</th>
+					      <th scope="col" data-toggle="tooltip" data-placement="top" title="Frequência absoluta">Fi</th>
+					      <th scope="col" data-toggle="tooltip" data-placement="top" title="Ponto médio">Xi</th>
+					      <th scope="col" data-toggle="tooltip" data-placement="top" title="Frequência acumulada">Fac</th>
+					      <th scope="col" data-toggle="tooltip" data-placement="top" title="frequência relativa">fi(%)</th>
 					      <th scope="col">Xi.Fi</th>
 					    </tr>
 					  </thead>
@@ -149,6 +128,22 @@
 				</div>
 			</div>
 		</div>
+		<div class="card">
+			<div class="card-header text-center">
+				<img class="figuras" src="./img/linha.png" alt="" width="32" height="32">
+				Gráficos
+			</div>
+			<div>
+				<canvas id="histograma"></canvas>
+			</div>
+			<div>
+				<canvas id="poligono_frequencia"></canvas>
+			</div>
+			<div>
+				<canvas id="ogiva"></canvas>
+			</div>
+		</div>
+
 	</main>
 	<footer>
 		<script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
