--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 				<img class="figuras" src="./img/linha.png" alt="" width="32" height="32">
 				Gráficos
 			</div>
-			<div>
+			<!-- <div>
 				<canvas id="histograma"></canvas>
-			</div>
+			</div> -->
 			<div>
 				<canvas id="poligono_frequencia"></canvas>
 			</div>
